config/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
    - name: mcp-gateway
      namespace: gateway-system
  hostnames:
    - 'keycloak.127-0-0-1.sslip.io' # initialize, tools/list, notification and routing authpolicy and rlp applied
  rules:
    # OAuth discovery endpoint rewrite rule
    - matches:
        - path:
            type: Exact
            value: /.well-known/oauth-authorization-server/realms/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /realms/mcp/.well-known/oauth-authorization-server
        # - type: ResponseHeaderModifier
        #   responseHeaderModifier:
        #     add:
        #       - name: Access-Control-Allow-Origin
        #         value: "*"
        #       - name: Access-Control-Allow-Methods
        #         value: "GET, POST, PUT, DELETE, OPTIONS, HEAD"
        #       - name: Access-Control-Allow-Headers
        #         value: "Content-Type, Authorization, Accept, Origin, X-Requested-With"
        #       - name: Access-Control-Max-Age
        #         value: "3600"
        #       - name: Access-Control-Allow-Credentials
        #         value: "true"
      backendRefs:
        - name: keycloak
          port: 80
    # Default rule for all other paths
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - Access-Control-Allow-Origin
              - Access-Control-Allow-Credentials
              - Access-Control-Allow-Headers
              - Access-Control-Allow-Methods
            set:
              - name: Access-Control-Allow-Origin
                value: "http://localhost:6274"
              - name: Access-Control-Allow-Credentials
                value: "true"
              - name: Access-Control-Allow-Headers
                value: "Content-Type, Authorization"
              - name: Access-Control-Allow-Methods
                value: "POST, OPTIONS"
      backendRefs:
        - name: keycloak
          port: 80
